--- a/CSS/HomePage.css
+++ b/CSS/HomePage.css
@@ -90,7 +90,7 @@ hr {
     background-color: #bdbdbd;
 }
 
-#linhaUsuario {
-    background-color: #2c6a2c;
+.linhaUsuario {
+    background-color: #2c6a2c !important;
     color: #e6e6e6;
 }
