--- a/CSS/AmizadePage.css
+++ b/CSS/AmizadePage.css
@@ -25,8 +25,8 @@ hr {
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-areas: "left right";
-    grid-template-columns: 25% 75%;
+    grid-template-areas: "left center right";
+    grid-template-columns: 25% 50% 25%;
     justify-content: center;
 }
 
@@ -35,15 +35,23 @@ hr {
     background-color: gray;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    margin-right: 20%;
     padding: 20px;
 }
 
 #blocoAdicionarAmigo {
-    grid-area: right;
+    grid-area: center;
     background-color: gray;
     border-radius: 20px;
     margin-right: 7%;
+    margin-left: 7%;
+    padding: 20px;
+}
+
+#listaAmizadePendente {
+    grid-area: right;
+    background-color: gray;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
     padding: 20px;
 }
 
@@ -76,43 +84,43 @@ button:hover {
     transform: scale(1.1);
 }
 
-#listagem {
+.lista {
     width: 100%;
     border: 1px solid black;
     border-collapse: collapse;
     text-align: center;
 }
 
-#listagem thead {
+.lista thead {
     background-color: #424242;
     color: #e6e6e6;
     height: 30px;
 }
 
-#listagem tbody {
+.lista tbody {
     color: black;
 }
 
-#listagem tbody tr {
+.lista tbody tr {
     height: 25px;
     font-size: 15px;
     font-weight: normal;
 }
 
-#listagem tbody tr:nth-child(even) {
+.lista tbody tr:nth-child(even) {
     background-color: #e6e6e6;
 }
 
-#listagem tbody tr:nth-child(odd) {
+.lista tbody tr:nth-child(odd) {
     background-color: #bdbdbd;
 }
 
-.imgBuscaAmigo {
+.imgAmigo {
     width: 20px;
     height: 20px;
 }
 
-.imgBuscaAmigo:hover {
+.imgAmigo:hover {
     cursor: pointer;
     transform: scale(1.1);
 }
