--- a/CSS/HomePage.css
+++ b/CSS/HomePage.css
@@ -134,3 +134,62 @@ button:hover {
     background-color: #2c6a2c !important;
     color: #e6e6e6;
 }
+
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.overlay.active {
+    display: flex;
+}
+
+#popup {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    justify-content: center;
+    width: 400px;
+}
+
+fieldset {
+    display: grid;
+    grid-template-areas: "leftGame rightGame";
+    grid-template-columns: 50% 50%;
+    margin: 10px;
+    text-align: start;
+}
+
+.leftGame {
+    grid-area: leftGame;
+}
+
+.rightGame {
+    grid-area: rightGame;
+    display: flex;
+    align-items: center;
+}
+
+#btns {
+    display: flex;
+    justify-content: space-around;
+}
+
+.btnJogar {
+    height: 40px;
+    width: 150px;
+    padding: 10px;
+    font-size: 20px;
+}
+
+.inputPersonalizado {
+    margin: 5px;
+    width: 40%;
+    height: 15px;
+}
