--- a/CSS/GamePage.css
+++ b/CSS/GamePage.css
@@ -109,3 +109,46 @@ hr {
     width: 12px;
     height: 12px;
 }
+
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.5);
+    justify-content: center;
+}
+
+.overlay.active {
+    display: flex;
+    align-items: center;
+}
+
+#popup {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.textoFinal {
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.btnVoltarHome {
+    margin-top: 10px;
+    height: 30px;
+    width: 150px;
+    background-color: gray;
+    border-radius: 10px;
+    border: 1px solid black;
+    transition: all 0.3s;
+}
+
+#btnVoltarHome:hover {
+    cursor: hand;
+    transform: scale(1.1);
+}
